--- a/views/bookmarks/index.erb
+++ b/views/bookmarks/index.erb
@@ -1,10 +1,15 @@
 <ul>
   <% @bookmarks.each do |bookmark| %>
-    <li><%= bookmark %></li>
+    <li>
+      <a href="<%= bookmark.url %>">
+        <%= bookmark.title %>
+      </a>
+    </li>
   <% end %>
 </ul>
 
 <form action="/create" method="post">
-  <input type="text" name="url" required>
+  <input type="text" name="url" placeholder="URL" required>
+  <input type="text" name="title" placeholder="Title" />
   <input type="submit" value="Add">
 </form>
