--- a/views/bookmarks/index.erb
+++ b/views/bookmarks/index.erb
@@ -1,6 +1,6 @@
 <ul>
   <% @bookmarks.each do |bookmark| %>
-    <li id="bookmark-<%= bookmark.id %>">
+    <li class="bookmark" id="bookmark-<%= bookmark.id %>">
       <a href="<%= bookmark.url %>" target="_blank">
         <%= bookmark.title %>
       </a>
@@ -8,11 +8,14 @@
         <input type='hidden' name='_method' value='DELETE'/>
         <input type="submit" value="Delete" />
       </form>
+      <form action="bookmarks/<%=bookmark.id%>/edit" method="get">
+        <input type="submit" value="Edit" />
+        </form>
     </li>
   <% end %>
 </ul>
 
-<form action="/create" method="post">
+<form action="/bookmarks" method="post">
   <input type="text" name="url" placeholder="URL" required>
   <input type="text" name="title" placeholder="Title" />
   <input type="submit" value="Add">
